# fcaptcha-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  crates.js  docker-compose.yml  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  rustdoc-yml  rustdoc.yml
benches/: benchmark.rs
conf/: default.toml
demo/: index.html  main.rs
example/: Dockerfile  demo.rs  docker-compose.yml  index.html  main.rs  single_puzzle.rs
fcaptcha/: all.html  index.html  sidebar-items.js
fcaptcha/build_puzzle/: enum.BuildPuzzleError.html  fn.build_puzzle.html  fn.build_puzzle_with.html  index.html  sidebar-items.js
fcaptcha/config/: fn.get.html  index.html
fcaptcha/util/: fn.get_timestamp.html  index.html  sidebar-items.js
fcaptcha/verify_puzzle_result/: enum.VerifyPuzzleResultError.html  fn.verify_puzzle_result.html  fn.verify_puzzle_result_with.html  index.html  sidebar-items.js
fcaptcha/web/: fn.build_puzzle_service.html  fn.verify_puzzle_result_service.html  index.html  sidebar-items.js  struct.BuildPuzzleServiceInput.html  struct.VerifyPuzzleResultServiceInput.html
fcaptcha_server/: all.html  fn.main.html  index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
src/: build_puzzle.rs  config.rs  lib.rs  main.rs  util.rs  verify_puzzle_result.rs  web.rs
src/fcaptcha/: build_puzzle.rs.html  config.rs.html  lib.rs.html  util.rs.html  verify_puzzle_result.rs.html  web.rs.html
src/fcaptcha_server/: main.rs.html
