[package]
name = "fcaptcha-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "fcaptcha-server"

[lib]
name = "fcaptcha"
path = "src/lib.rs"

[[bin]]
name = "fcaptcha-server"
path = "src/main.rs"

[[example]]
name = "fcaptcha-demo"
path = "example/main.rs"

[features]
default = ["web"]
web = []

[dependencies]
actix-web = "4.3.1"
base64 = "0.21.3"
hex = "0.4.3"
hmac-sha256 = "1.1.7"
lazy_static = "1.4.0"
rand = "0.8.5"
log = "0.4.0"
env_logger = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }
blake2 = "0.10.6"
actix-cors = "0.6.4"
config = "0.13.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false